--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,14 @@
     <version>${org.springframework-version}</version>
   </dependency>
 
-  <dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-commons -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-commons</artifactId>
+      <version>2.2.0.RELEASE</version>
+    </dependency>
+
+    <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-webmvc</artifactId>
     <version>${org.springframework-version}</version>
